--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
 [build-system]
 requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
 
+[tool.black]
+skip-string-normalization = true
+
 [tool.isort]
 profile = "black"
 src_paths = "fraplib"
