--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,16 +14,8 @@ match_dir = "fraplib"
 convention = "numpy"
 add_select = ["D402","D415","D417"]
 
-[tool.pytest.ini_options]
-testpaths = ["docs/examples", "tests"]
-addopts = [
-    "--current-env",
-    "--doctest-continue-on-failure",
-    "--doctest-modules",
-    "--ignore-glob=docs/examples/*.py",
-    "--mpl",
-    "--nbval",
-]
+# [tool.pytest.ini_options]
+# testpaths = ["tests"]
 
 [tool.mypy]
 files = "fraplib"
