--- a/setup.cfg
+++ b/setup.cfg
@@ -25,8 +25,12 @@ project_urls =
 zip_safe = False
 packages = find:
 python_requires = >=3.7
-; install_requires =
-    ; numpy
+install_requires =
+    numpy
+    matplotlib
+    czifile
+    aicsimageio
+    aicspylibczi
 
 [options.extras_require]
 testing =
