remove aicsimageio dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,9 @@ install_requires =
     numpy
     matplotlib
     czifile
-    aicsimageio
-    aicspylibczi
+    xml.etree.ElementTree
+    # aicsimageio
+    # aicspylibczi
 
 [options.extras_require]
 testing =
