--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
     numpy
     matplotlib
     czifile
-    xml.etree
+    # xml.etree
     symfit
     # aicsimageio
     # aicspylibczi
