update library description and readme

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,8 @@ author = Elizabeth May
 author_email = ejmay2012@gmail.com
 
 
-description = functions for displaying and calculating frap experiment stuff
+
+description = functions for calculating and displaying frap experiment data
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = BSD license
